--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ assets/img_productos/*.png
 assets/img_productos/*.avg
 assets/img_productos/*.web
 assets/img_productos/*.icon
+controller/persona.php
